--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "react-modal": "^3.11.2",
+    "react-reveal": "^1.2.2",
   },
   "scripts": {
     "server": "nodemon server.js",
